# CareCast

./: .replit  README.md  docker-compose.yml  requirements.txt  requirements_ml.txt  run_ml_model.py
CareCast (1)/CareCast/: Dockerfile  RUN_LOCALLY.md  pyproject.toml  replit.md  requirements.txt
CareCast (1)/CareCast/backend/: main.py
CareCast (1)/CareCast/backend/models/: admissions_next_1h.joblib  admissions_next_24h.joblib  admissions_next_6h.joblib  bed_occupancy_next_1h.joblib  bed_occupancy_next_24h.joblib  bed_occupancy_next_6h.joblib  metadata.joblib  oxygen_level_next_1h.joblib  oxygen_level_next_24h.joblib  oxygen_level_next_6h.joblib
CareCast (1)/CareCast/data/: synthetic_data_generator.py
CareCast (1)/CareCast/frontend/: package-lock.json  package.json
CareCast (1)/CareCast/frontend/public/: index.html
CareCast (1)/CareCast/frontend/src/: App.css  App.js  index.css
CareCast (1)/CareCast/frontend/src/components/: Dashboard.js  Header.js
CareCast (1)/CareCast/models/: ml_pipeline.py
CareCast (1)/CareCast/optimization/: staff_optimizer.py
